DuPont DevSB/src/objects/ccrz__E_PromotionAccountGroupFilter__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__CC_AccountGroup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Account Group to which this filter applies.</description>
        <label>CC Account Group</label>
        <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
        <relationshipLabel>CC Promotion Account Group Filters</relationshipLabel>
        <relationshipName>E_Promotion_Account_Group_Filters</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CC_Promotion__c</fullName>
        <description>The promotion to which this filter applies.</description>
        <label>CC Promotion</label>
        <referenceTo>ccrz__E_Promo__c</referenceTo>
        <relationshipLabel>CC Promotion Account Group Filters</relationshipLabel>
        <relationshipName>E_PromotionAccountGroupFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The end date after which this promotion is no longer value.  The end date is exclusive, in other words, the filter no longer applies after the end date.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__FilterType__c</fullName>
        <description>The filter type, either Inclusive or Exclusive.</description>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inclusive</fullName>
                    <default>true</default>
                    <label>Inclusive</label>
                </value>
                <value>
                    <fullName>Exclusive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The start date at which time the filter applies.  The start date is inclusive.  In other words the filter will start being applied on the start date.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>CC Promotion Account Group Filter</label>
    <nameField>
        <displayFormat>PAGF-{0000000}</displayFormat>
        <label>CC Promotion Account Group Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Promotion Account Group Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>